# readaloud

./: .gitignore  README.md  config.example.toml  install.sh  pyproject.toml
docs/: HANDOFF.md
reference/: SKILL.md  kokoro_synth.py  read-aloud-driver.sh  read-aloud.sh
skill/: SKILL.md.tmpl
src/readaloud/: __init__.py  app.py  cli.py  client.py  config.py  core.py  daemon.py  ipc.py  playback.py  playlist.py  readaloud.tcss  speech.py  text.py  transcript.py  watcher.py
src/readaloud/engines/: __init__.py  base.py  edge.py  kokoro.py  say.py
src/readaloud/screens/: reader.py  voice_lab.py
