[project]
name = "readaloud"
version = "0.1.0"
description = "TUI to read Claude Code responses and files aloud with natural neural voices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "kokoro>=0.9.4",
    "soundfile",
    "numpy",
    "tomli-w>=1.0",
]

[project.scripts]
readaloud = "readaloud.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/readaloud"]
